# Consolidated

./: .gitignore  .replit  README.md  add_atmosphere_column.py  add_key_takeaways_column.py  app.py  billboard_api.py  billboard_data_update.md  check_api_key.py  check_billboard_api_key.py  check_imdb_api_key.py  check_limitless_api_key.py  clean_duplicate_sections.py  clean_markdown_from_bee_data.py  clean_markdown_in_database.py  clean_netflix_episode_titles.py  clean_netflix_titles.py  clean_summary_atmosphere.py  compare_and_consolidate.py  config.yml  config_loader.py  consolidated_summaries_20250322_162814.json  consolidated_summaries_20250322_162814.md  consolidated_summaries_20250323_020421.json  consolidated_summaries_20250323_020421.md  consolidated_summaries_20250323_022926.json  consolidated_summaries_20250323_022926.md  consolidated_summaries_20250323_023729.json  consolidated_summaries_20250323_023729.md  consolidated_summaries_20250323_024901.json  consolidated_summaries_20250323_024901.md  consolidated_summary.py  convert_key_takeaways_to_json.py  database_handler.py  deduplicate_netflix_series.py  extract_lifelog_subsummaries.py  extract_remaining_key_takeaways.py  extract_transcript_lines.py  find_overlapping_events.py  fix_from_raw_data.py  (+25 more)
attached_assets/: NetflixViewingHistory.csv  NetflixViewingHistory_sample.csv  NetflixViewingHistory_small.csv  Pasted-import-asyncio-from-beeai-import-Bee-async-def-main-Create-an-instance-of-the-Bee-SDK-with-1741794892583.txt  TestNetflix.csv  facts-swagger.json  locations-swagger.json
static/: script.js  style.css
(+95 files in other folders)
